True dark mode + major bug
Add option "true dark mode" for the nav and footer.

Fixed qcs by replacing "text()" with "html()" now should worl

Fixed connexion between popup options and DOM script by giving a proper response of the element changed.

Adding more styling for dark mode and QCS highlighting

--- a/DOM.css
+++ b/DOM.css
@@ -1,8 +1,10 @@
 .QCS {
   background-color: magenta;
   padding: 5px;
+  border-radius: 10px;
+  color: white;
 }
 .dark_white {
   background-color: rgb(24,24,27) !important;
-  color: #FDFCFC;
+  color: rgba(255,255,255,.6);
 }
